fixed collapse

--- a/src/SCSS/components/collapse.scss
+++ b/src/SCSS/components/collapse.scss
@@ -1,6 +1,10 @@
 .collapse {
     width: 60%;
 
+    @media screen and (max-width: 600px) {
+        width: 100%;
+    }
+
     &__title {
         color: white;
     }
